--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <div id="app">
   <h1>本日の癒やし猫</h1>
